lightsaber v1, support for lightsaber v1 keyboard

--- a/keyboard/lightsaber/Makefile
+++ b/keyboard/lightsaber/Makefile
@@ -49,13 +49,15 @@ TARGET_DIR = .
 
 
 # List C source files here. (C dependencies are automatically generated.)
-SRC =	keymap.c \
-	matrix.c \
-	led.c \
-	backlight.c
+SRC = matrix.c \
+  led.c \
+  backlight.c
+
+ifdef KEYMAP
+  SRC := keymap_$(KEYMAP).c $(SRC)
+endif
 
 CONFIG_H = config.h
-
 
 # MCU name
 MCU = atmega32u4
@@ -97,13 +99,13 @@ F_USB = $(F_CPU)
 # Build Options
 #   comment out to disable the options.
 #
-BOOTMAGIC_ENABLE = yes	# Virtual DIP switch configuration(+1000)
-#MOUSEKEY_ENABLE = yes	# Mouse keys(+4700)
-EXTRAKEY_ENABLE = yes	# Audio control and System control(+450)
-CONSOLE_ENABLE = yes	# Console for debug(+400)
+#BOOTMAGIC_ENABLE = yes  # Virtual DIP switch configuration(+1000)
+MOUSEKEY_ENABLE = yes   # Mouse keys(+4700)
+#EXTRAKEY_ENABLE = yes   # Audio control and System control(+450)
+#CONSOLE_ENABLE = yes   # Console for debug(+400)
 COMMAND_ENABLE = yes    # Commands for debug and configuration
-#SLEEP_LED_ENABLE = yes  # Breathing sleep LED during USB suspend
-#NKRO_ENABLE = yes	# USB Nkey Rollover - not yet supported in LUFA
+#SLEEP_LED_ENABLE = yes # Breathing sleep LED during USB suspend
+#NKRO_ENABLE = yes       # USB Nkey Rollover - not yet supported in LUFA
 BACKLIGHT_ENABLE = yes  # Enable keyboard backlight functionality
 
 
@@ -121,6 +123,3 @@ VPATH += $(TMK_DIR)
 include $(TMK_DIR)/protocol/lufa.mk
 include $(TMK_DIR)/common.mk
 include $(TMK_DIR)/rules.mk
-
-winkey: OPT_DEFS += -DLAYOUT_WINKEY
-winkey: all
