--- a/keyboard/lightpad/Makefile
+++ b/keyboard/lightpad/Makefile
@@ -48,10 +48,16 @@ TMK_DIR = ../../tmk_core
 TARGET_DIR = .
 
 # List C source files here. (C dependencies are automatically generated.)
-SRC =	keymap.c \
+SRC =	keymap_common.c \
 	matrix.c \
 	led.c \
 	backlight.c
+
+ifdef KEYMAP
+	SRC := keymap_$(KEYMAP).c $(SRC)
+else
+	SRC := keymap_lightpad.c $(SRC)
+endif
 
 CONFIG_H = config.h
 
@@ -94,10 +100,10 @@ F_USB = $(F_CPU)
 #   comment out to disable the options.
 #
 BOOTMAGIC_ENABLE = yes	# Virtual DIP switch configuration(+1000)
-#MOUSEKEY_ENABLE = yes	# Mouse keys(+4700)
+MOUSEKEY_ENABLE = yes	# Mouse keys(+4700)
 EXTRAKEY_ENABLE = yes	# Audio control and System control(+450)
 #CONSOLE_ENABLE = yes	# Console for debug(+400)
-#COMMAND_ENABLE = yes    # Commands for debug and configuration
+COMMAND_ENABLE = yes    # Commands for debug and configuration
 #SLEEP_LED_ENABLE = yes  # Breathing sleep LED during USB suspend
 #NKRO_ENABLE = yes	# USB Nkey Rollover - not yet supported in LUFA
 BACKLIGHT_ENABLE = yes  # Enable keyboard backlight functionality
