--- a/keyboard/kitten_paw/Makefile
+++ b/keyboard/kitten_paw/Makefile
@@ -39,7 +39,7 @@
 #----------------------------------------------------------------------------
 
 # Target file name (without extension).
-TARGET = kittenpaw_lufa
+TARGET = kittenpaw
 
 # Directory common source filess exist
 TMK_DIR = ../../tmk_core
@@ -48,9 +48,14 @@ TMK_DIR = ../../tmk_core
 TARGET_DIR = .
 
 # List C source files here. (C dependencies are automatically generated.)
-SRC =	keymap.c \
-	matrix.c \
+SRC = matrix.c \
 	led.c
+
+ifdef KEYMAP
+    SRC := keymap_$(KEYMAP).c $(SRC)
+else
+    SRC := keymap_ansi.c $(SRC)
+endif
 
 CONFIG_H = config.h
 
@@ -93,13 +98,13 @@ F_USB = $(F_CPU)
 # Build Options
 #   comment out to disable the options.
 #
-#BOOTMAGIC_ENABLE = yes	# Virtual DIP switch configuration(+1000)
+BOOTMAGIC_ENABLE = yes	# Virtual DIP switch configuration(+1000)
 MOUSEKEY_ENABLE = yes	# Mouse keys(+4700)
 EXTRAKEY_ENABLE = yes	# Audio control and System control(+450)
 #CONSOLE_ENABLE = yes	# Console for debug(+400)
 COMMAND_ENABLE = yes    # Commands for debug and configuration
 #SLEEP_LED_ENABLE = yes  # Breathing sleep LED during USB suspend
-#NKRO_ENABLE = yes	# USB Nkey Rollover - not yet supported in LUFA
+NKRO_ENABLE = yes	# USB Nkey Rollover - not yet supported in LUFA
 
 
 # Boot Section Size in bytes
