--- a/converter/usb_usb/Makefile
+++ b/converter/usb_usb/Makefile
@@ -92,7 +92,7 @@ OPT_DEFS += -DINTERRUPT_CONTROL_ENDPOINT
 #
 MOUSEKEY_ENABLE ?= yes	# Mouse keys
 EXTRAKEY_ENABLE ?= yes	# Media control and System control
-CONSOLE_ENABLE ?= yes	# Console for debug
+#CONSOLE_ENABLE ?= yes	# Console for debug
 #COMMAND_ENABLE ?= yes    # Commands for debug and configuration
 #NKRO_ENABLE ?= yes	# USB Nkey Rollover
 
