--- a/converter/usb_usb/Makefile
+++ b/converter/usb_usb/Makefile
@@ -88,8 +88,8 @@ F_USB ?= $(F_CPU)
 #   comment out to disable the options.
 #
 MOUSEKEY_ENABLE ?= yes	# Mouse keys
-EXTRAKEY_ENABLE ?= yes	# Media control and System control
-CONSOLE_ENABLE ?= yes	# Console for debug
+#EXTRAKEY_ENABLE ?= yes	# Media control and System control
+#CONSOLE_ENABLE ?= yes	# Console for debug
 #COMMAND_ENABLE ?= yes    # Commands for debug and configuration
 #NKRO_ENABLE ?= yes	# USB Nkey Rollover
 
