--- a/keyboard/gh60/Makefile
+++ b/keyboard/gh60/Makefile
@@ -61,7 +61,6 @@ CONFIG_H = config.h
 
 
 # MCU name
-#MCU = at90usb1287
 MCU = atmega32u4
 
 # Processor frequency.
@@ -115,11 +114,11 @@ OPT_DEFS += -DBOOTLOADER_SIZE=4096
 #
 #BOOTMAGIC_ENABLE = yes	# Virtual DIP switch configuration(+1000)
 MOUSEKEY_ENABLE = yes	# Mouse keys(+4700)
-EXTRAKEY_ENABLE = yes	# Audio control and System control(+450)
-CONSOLE_ENABLE = yes	# Console for debug(+400)
+#EXTRAKEY_ENABLE = yes	# Audio control and System control(+450)
+#CONSOLE_ENABLE = yes	# Console for debug(+400)
 COMMAND_ENABLE = yes    # Commands for debug and configuration
 #SLEEP_LED_ENABLE = yes  # Breathing sleep LED during USB suspend
-NKRO_ENABLE = yes	# USB Nkey Rollover
+#NKRO_ENABLE = yes	# USB Nkey Rollover
 
 
 # Optimize size but this may cause error "relocation truncated to fit"
