--- a/keyboard/fc660c/Makefile
+++ b/keyboard/fc660c/Makefile
@@ -67,15 +67,15 @@ OPT_DEFS += -DBOOTLOADER_SIZE=4096
 # Build Options
 #   comment out to disable the options.
 #
-#BOOTMAGIC_ENABLE ?= yes	# Virtual DIP switch configuration
+BOOTMAGIC_ENABLE ?= yes	# Virtual DIP switch configuration
 MOUSEKEY_ENABLE ?= yes		# Mouse keys
 EXTRAKEY_ENABLE ?= yes		# Audio control and System control
 CONSOLE_ENABLE ?= yes		# Console for debug
 COMMAND_ENABLE ?= yes    	# Commands for debug and configuration
 NKRO_ENABLE ?= yes		# USB Nkey Rollover
 #ACTIONMAP_ENABLE ?= yes		# Use 16bit actionmap instead of 8bit keymap
-UNIMAP_ENABLE ?= yes		# Universal keymap
-KEYMAP_SECTION_ENABLE ?= yes	# fixed address keymap for keymap editor
+#UNIMAP_ENABLE ?= yes		# Universal keymap
+#KEYMAP_SECTION_ENABLE ?= yes	# fixed address keymap for keymap editor
 
 #OPT_DEFS += -DNO_ACTION_TAPPING
 #OPT_DEFS += -DNO_ACTION_LAYER
