--- a/keyboard/fc660c/Makefile
+++ b/keyboard/fc660c/Makefile
@@ -69,13 +69,11 @@ OPT_DEFS += -DBOOTLOADER_SIZE=4096
 #
 #BOOTMAGIC_ENABLE ?= yes	# Virtual DIP switch configuration
 MOUSEKEY_ENABLE ?= yes		# Mouse keys
-EXTRAKEY_ENABLE ?= yes		# Audio control and System control
-CONSOLE_ENABLE ?= yes		# Console for debug
-COMMAND_ENABLE ?= yes    	# Commands for debug and configuration
-NKRO_ENABLE ?= yes		# USB Nkey Rollover
-#ACTIONMAP_ENABLE ?= yes		# Use 16bit actionmap instead of 8bit keymap
-UNIMAP_ENABLE ?= yes		# Universal keymap
-KEYMAP_SECTION_ENABLE ?= yes	# fixed address keymap for keymap editor
+#EXTRAKEY_ENABLE ?= yes		# Audio control and System control
+#CONSOLE_ENABLE ?= yes		# Console for debug
+#COMMAND_ENABLE ?= yes    	# Commands for debug and configuration
+#NKRO_ENABLE ?= yes		# USB Nkey Rollover
+#KEYMAP_SECTION_ENABLE ?= yes	# fixed address keymap for keymap editor
 
 #OPT_DEFS += -DNO_ACTION_TAPPING
 #OPT_DEFS += -DNO_ACTION_LAYER
@@ -85,19 +83,13 @@ KEYMAP_SECTION_ENABLE ?= yes	# fixed address keymap for keymap editor
 #
 # Keymap file
 #
-ifeq (yes,$(strip $(UNIMAP_ENABLE)))
-    KEYMAP_FILE = unimap
-else
-    ifeq (yes,$(strip $(ACTIONMAP_ENABLE)))
-        KEYMAP_FILE = actionmap
-    else
-        KEYMAP_FILE = keymap
-    endif
-endif
 ifdef KEYMAP
-    SRC := $(KEYMAP_FILE)_$(KEYMAP).c $(SRC)
-else
-    SRC := $(KEYMAP_FILE).c $(SRC)
+    SRC := keymap_$(KEYMAP).c $(SRC)
+endif
+
+ifdef ACTIONMAP
+    SRC := actionmap_$(ACTIONMAP).c $(SRC)
+    ACTIONMAP_ENABLE = yes	# Use 16bit action codes in keymap instead of 8bit keycodes
 endif
 
 
